--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         }
 
         .menu-overlay.show {
-            display: block;
+            display: block !important;
         }
 
         #mobileNav {
@@ -105,16 +105,17 @@
             top: 0;
             right: -300px;
             width: 280px;
-            height: 100%;
+            height: 100vh;
             background: white;
             z-index: 300;
             transition: right 0.3s ease;
             box-shadow: -5px 0 15px rgba(0,0,0,0.1);
             padding-top: 60px;
+            overflow-y: auto;
         }
 
         #mobileNav.show {
-            right: 0;
+            right: 0 !important;
         }
 
         #mobileNav ul {
@@ -158,7 +159,7 @@
         }
 
         .page.active {
-            display: block;
+            display: block !important;
         }
 
         .hero {
