--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Coast Aquarium Society - SCAS</title>
+    
+    <!-- Open Graph meta tags for social media sharing -->
+    <meta property="og:title" content="Space Coast Aquarium Society - SCAS">
+    <meta property="og:description" content="Join our community of aquarium enthusiasts on Florida's Space Coast. Monthly meetings, expert presentations, fish auctions, and beginner workshops.">
+    <meta property="og:image" content="https://spacecoastas.org/logo.png">
+    <meta property="og:url" content="https://spacecoastas.org">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Space Coast Aquarium Society">
+    
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Space Coast Aquarium Society - SCAS">
+    <meta name="twitter:description" content="Join our community of aquarium enthusiasts on Florida's Space Coast.">
+    <meta name="twitter:image" content="https://spacecoastas.org/logo.png">
     <script>
         // Load next event on page load
         document.addEventListener('DOMContentLoaded', function() {
