--- a/index.html
+++ b/index.html
@@ -608,6 +608,7 @@
             <li><a href="#" onclick="showPage('bylaws')" class="nav-link">Bylaws</a></li>
             <li><a href="#" onclick="showPage('auction-rules')" class="nav-link">Auction Rules</a></li>
             <li><a href="#" onclick="showPage('member-photos')" class="nav-link">Member Photos</a></li>
+            <li><a href="#" onclick="showPage('aquatic-alliance')" class="nav-link">Aquatic Alliance</a></li>
             <li><a href="#" onclick="showPage('contact')" class="nav-link">Contact</a></li>
         </ul>
     </nav>
@@ -822,6 +823,97 @@
                 <div class="photo-frame">
                     <img id="frame4" src="gallery/IMG_ (4).jpg" alt="Member photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="photo-placeholder" style="display: none;">📸</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Aquatic Alliance Page -->
+        <div id="aquatic-alliance" class="page">
+            <div class="hero">
+                <h2>SCAS Aquatic Alliance</h2>
+                <p style="font-size: 1.1rem; color: #666; margin-bottom: 10px;">Connecting classrooms, conservation, and the aquarium hobby</p>
+            </div>
+
+            <div style="max-width: 900px; margin: 0 auto;">
+                <p style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 20px;">
+                    The <strong>SCAS Aquatic Alliance</strong> is a community partnership program created by the 
+                    <strong>Space Coast Aquarium Society (SCAS)</strong>. Its mission is to bring real-world aquatic 
+                    conservation into local classrooms by connecting students with experienced aquarists and 
+                    <strong>CARES-listed</strong> freshwater fish species.
+                </p>
+                <p style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 40px;">
+                    Through this program, students learn how to care for live fish, explore aquatic ecosystems, 
+                    and understand how aquarium hobbyists around the world help protect endangered and 
+                    at-risk species through conservation-focused breeding.
+                </p>
+
+                <div class="info-card" style="margin-bottom: 30px;">
+                    <h3>🎓 What the Program Does</h3>
+                    <ul style="margin-left: 20px; line-height: 1.8;">
+                        <li>Introduces <strong>CARES conservation species</strong> to classrooms in a safe, education-focused way</li>
+                        <li>Provides <strong>hands-on aquarium learning</strong> (care, observation, water quality concepts)</li>
+                        <li>Connects students with <strong>guest speakers and mentors</strong> from SCAS and CARES</li>
+                        <li>Helps students understand conservation, biodiversity, and responsible aquarium practices</li>
+                        <li>Scales for <strong>elementary through high school</strong> with age-appropriate goals</li>
+                    </ul>
+                </div>
+
+                <div class="info-card" style="margin-bottom: 30px;">
+                    <h3>⚙️ How It Works</h3>
+                    <ol style="margin-left: 20px; line-height: 1.8;">
+                        <li><strong>Planning & Setup:</strong> SCAS works with teachers to identify appropriate species and equipment.</li>
+                        <li><strong>Classroom Aquarium:</strong> Students observe and care for live fish in a class tank.</li>
+                        <li><strong>Mentorship & Speakers:</strong> SCAS members and CARES experts visit (in-person or online).</li>
+                        <li><strong>Student Learning:</strong> Activities range from simple observations to data collection and presentations.</li>
+                        <li><strong>Conservation Impact:</strong> Surplus fish (when applicable) are redistributed through SCAS and the CARES network.</li>
+                    </ol>
+                </div>
+
+                <div class="info-card" style="margin-bottom: 30px;">
+                    <h3>📚 Grade-Level Adaptations</h3>
+                    <ul style="margin-left: 20px; line-height: 1.8;">
+                        <li><strong>Elementary:</strong> Basic needs of living things, observation journals, creative projects.</li>
+                        <li><strong>Middle School:</strong> Ecosystems, water quality, simple experiments, data graphs.</li>
+                        <li><strong>High School:</strong> Breeding projects, ecology discussions, research-style reporting.</li>
+                    </ul>
+                </div>
+
+                <div class="info-card" style="margin-bottom: 30px;">
+                    <h3>🛡️ Volunteer & Safety Policies</h3>
+                    <p style="line-height: 1.8;">
+                        All <strong>in-person volunteers</strong> participating in school activities must comply with 
+                        each school's volunteer and visitor policies, including any required background screening. 
+                        Virtual guest speakers typically do <strong>not</strong> require full clearance but must coordinate 
+                        sessions through school staff.
+                    </p>
+                </div>
+
+                <div class="info-grid" style="margin-top: 40px;">
+                    <div class="info-card">
+                        <h3>🐠 For SCAS Members</h3>
+                        <p style="margin-bottom: 20px;">
+                            SCAS members can support the Aquatic Alliance by maintaining and registering CARES species, 
+                            providing fish or equipment, or volunteering as mentors or guest speakers.
+                        </p>
+                        <a href="https://form.jotform.com/253275798715068" 
+                           target="_blank" 
+                           class="cta-button">
+                            Member Participation Form
+                        </a>
+                    </div>
+
+                    <div class="info-card">
+                        <h3>🏫 For Schools</h3>
+                        <p style="margin-bottom: 20px;">
+                            Teachers and administrators interested in bringing the 
+                            <strong>SCAS Aquatic Alliance</strong> to their campus are encouraged to reach out. 
+                            The program can be tailored for short-term projects, semester-long classes, or ongoing enrichment.
+                        </p>
+                        <a href="mailto:socials@spacecoastas.org?subject=Aquatic Alliance - School Inquiry" 
+                           class="cta-button">
+                            Contact Us
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
