--- a/index.html
+++ b/index.html
@@ -867,6 +867,7 @@
                                 <p style="font-size: 0.95rem; color: #e67e00; font-weight: 600; margin-bottom: 15px;">Limited to 4 vendor spots inside the auction room</p>
                                 <ul style="list-style: none; padding: 0; margin-bottom: 20px; font-size: 0.95rem;">
                                     <li style="padding: 6px 0; color: #333;">✓ One vendor table with premium placement</li>
+                                    <li style="padding: 6px 0; color: #333;">✓ Vendors may sell items at their tables (excluding live fish/plants)</li>
                                     <li style="padding: 6px 0; color: #333;">✓ Name printed on official event t-shirt</li>
                                     <li style="padding: 6px 0; color: #333;">✓ Logo printed on event banner</li>
                                     <li style="padding: 6px 0; color: #333;">✓ Recognition on SCAS social media</li>
